--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "config": "^1.21.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/eslint/bin/eslint.js ./index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,9 @@
   ],
   "author": "Daniel McQuiston <daniel.pro@dehugo.net>",
   "license": "MIT",
+  "engines": {
+    "node": "^4"
+  },
   "bugs": {
     "url": "https://github.com/deHugo/better-app-config/issues"
   },
